compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__pipes__clever_pipe_rewriting.snap
---
source: compiler-core/src/erlang/tests/pipes.rs
assertion_line: 6
expression: "\npub fn apply(f: fn(a) -> b, a: a) { a |> f }\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([apply/2]).

-file("/root/project/test/my/mod.rakun", 2).
-spec apply(fun((I) -> J), I) -> J.
apply(F, A) ->
    _pipe = A,
    F(_pipe).
