compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__pipes__clever_pipe_rewriting1.snap
---
source: compiler-core/src/erlang/tests/pipes.rs
assertion_line: 16
expression: "\npub fn apply(f: fn(a, Int) -> b, a: a) { a |> f(1) }\n"
---
----- SOURCE CODE

pub fn apply(f: fn(a, Int) -> b, a: a) { a |> f(1) }


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([apply/2]).

-file("/root/project/test/my/mod.rakun", 2).
-spec apply(fun((I, integer()) -> J), I) -> J.
apply(F, A) ->
    _pipe = A,
    F(_pipe, 1).
