compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__pipes__pipe_in_tuple.snap
---
source: compiler-core/src/erlang/tests/pipes.rs
expression: "pub fn x(f) {\n  #(\n    1 |> f\n  )\n}"
---
----- SOURCE CODE
pub fn x(f) {
  #(
    1 |> f
  )
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([x/1]).

-file("/root/project/test/my/mod.rakun", 1).
-spec x(fun((integer()) -> K)) -> {K}.
x(F) ->
    {begin
            _pipe = 1,
            F(_pipe)
        end}.
